# octopus

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  start.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_main.py
frontend/: .prettierrc  .stylelintrc.json  eslint.config.js  index.html  jsconfig.json  knip.json  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: smoke.spec.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: api.js  api.test.js  markdown.js  markdown.test.js  markdownActions.js  modelFit.js  modelFit.test.js  modelHints.js  modelHints.test.js
frontend/src/lib/components/: Banner.svelte  CommandPalette.svelte  Footer.svelte  GetStarted.svelte  GetStarted.test.js  Header.svelte  OctoLogo.svelte  OctoLogo.test.js  Oscilloscope.svelte  oscilloscope-palette.js
frontend/src/lib/components/ui/: Button.svelte  Card.svelte  Code.svelte  Tag.svelte  (+3 more)
frontend/src/lib/pages/: AboutPage.svelte  ChatPage.svelte  DesignPage.svelte  DiagnosticPage.svelte  LabsPage.svelte  ModelsPage.svelte  PullPage.svelte  RoadmapPage.svelte  ScopeLabPage.svelte  SettingsPage.svelte  StoragePage.svelte  SystemPage.svelte  design-palette.js  labs-palette.js
frontend/src/lib/stores/: activity.svelte.js  connection.svelte.js  model.svelte.js  pull.svelte.js  route.svelte.js  theme.svelte.js
scripts/: multi-model-loop.sh  multi-model-test.sh  secret-scan.sh  validate-patterns.sh
